syntax = "proto3";

package feup.sdle.message;

option java_package = "feup.sdle.message";
option java_outer_classname = "HashRingJoinMessage";

message HashRingJoin {

}
